[package]
name = "inpm"
version = "0.2.0"
edition = "2018"
authors = ["Liam Perlaki <lperlaki@icloud.com>"]
repository = "https://github.com/lperlaki/inpm-rs"
description = "Inlude npm"
license = "MIT"
readme = "./README.md"
keywords = ["http", "static", "web", "server", "npm"]
categories = ["web-programming::http-server"]

[features]
warp=["warpd", "mime_guess"]
embed=["inpm-impl/embed"]

[dependencies]
proc-macro-hack = "0.5"
walkdir="2.3"
inpm-impl={version="0.2", path = "./impl"}
warpd={ package="warp", version = "0.2", optional=true }
mime_guess= { version = "2", optional = true}


[workspace]
members = ["impl"]