[package]
name = "inpm-impl"
version = "0.1.0"
edition = "2018"
authors = ["Liam Perlaki <lperlaki@icloud.com>"]
repository = "https://github.com/lperlaki/inpm-rs"
description = "Inlude npm"
license = "MIT"
readme = "../README.md"
keywords = ["http", "warp", "static", "web", "server", "npm"]
categories = ["web-programming::http-server"]


[lib]
proc-macro = true

[features]

embed=[]


[dependencies]
proc-macro-hack = "0.5"
proc-macro2 = "1"
syn="1"
quote="1"
walkdir="2.3"